--- a/.gitignore
+++ b/.gitignore
@@ -53,9 +53,10 @@ playground.xcworkspace
 # We recommend against adding the Pods directory to your .gitignore. However
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
-#
-# Pods/
-#
+
+# We decided not to commit Pods, because in our case those frameworks will contain big binary files
+Pods/
+
 # Add this line if you want to avoid checking in source code from the Xcode workspace
 # *.xcworkspace
 
